k8s/base/pet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-service
  labels:
    app: pet-service
spec:
  selector:
    app: pet-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-service
  labels:
    app: pet-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-service
  template:
    metadata:
      labels:
        app: pet-service
    spec:
      containers:
        - name: pet-service
          image: 304930966996.dkr.ecr.us-west-2.amazonaws.com/pet-hospital-pet-service:1d2a3ad78f034ef914c24748a453843d81c142af
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ecr-registry-secret
